whitespace, body fix

--- a/styles/page-style.css
+++ b/styles/page-style.css
@@ -69,7 +69,7 @@
 .resume-wrapper h2 {
     color: rgb(255, 255, 255);
     text-align: center;
-    font-size: 7em;
+    font-size: 4em;
     letter-spacing: 0.9rem;
 }
 
@@ -126,6 +126,18 @@
     margin: 0px auto;
     padding: 1.5em;
     text-align: center;
+}
+
+/*Responsize Resume Page Styles*/
+
+@media (max-width: 406px) {
+    .resume-content section:first-child {
+        padding: 0px;
+    }
+
+    .resume-content {
+        padding: 2em;
+    }
 }
 
 /*-----About Page Styles-----*/
